scss/_custom.scss
/* ... */
#sub-nav img, #full-nav img, #nav-logo img {
  height: 80px;
  width: 80px;
}

#sub-nav-menu .top-bar ul li > a, #sub-nav-menu .top-bar-section ul li > a {
    color: $pri-font-color;
}

.sub-nav-border {
    border-top: 3px solid $primary-color;
}

/*---- CTA Landing ----*/

.cta {
  padding-top: 4%;
  color: $sec-font-color;
}

.cta span.pictogram {
    font-family: "entypo-social";
    padding-left: 1.5%;
    padding-right: 1.5%;
    font-size: 6em;
    color: $sec-font-color;
}

.cta span.pictogram:hover {
    color: $primary-color;
}

.cta-bg {
    background: #2980b9 url('/images/cta.jpg') center center no-repeat fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 100%;
    width: 100%;
    min-height: 100%;
}

.cta h1 {
    color: $sec-font-color;
    letter-spacing: 0.02em;
    line-height: 0.9em;
}

/* Large Screen */

@media only screen and (min-width: 64.063em) {
    .cta h1 {
        font-size: 5.8em;
    }
}

/* Small Screen */

@media only screen and (max-width: 40em) {
    .cta {
        padding-top: 3%;
    }
    .cta h1 {
        font-size: 3em;
    }
}

/* Medium Screen */

@media only screen and (min-width: 40.063em) and (max-width: 64em) {
  .cta {
    padding-top: 10%;
  }
  .cta h1 {
    font-size: 4.5em;
  }
}

.cta h4 {
  color: #f7f7f7;
  font-weight: 400;
}

.cta .button {
  background-color: transparent;
  color: $sec-font-color;
  border: 1px solid #f7f7f7;
}

/*---- About ----*/

.about {
  padding-top: 4%;
  padding-bottom: 4%;
}

.about h4 {
    font-size: 1.3em;
}

.about img {
    border-radius: 20px;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    max-height: 331px;
    max-width: 272px;
}

/*---- Service ----*/

.service-highlight {
    padding-top: 5%;
    padding-bottom: 4%;
    background: $primary-bg;
}

/*---- Recent Work ----*/

.recent-work {
    padding-top: 5%;
    padding-bottom: 5%;
    background: $primary-bg;
}

/*---- Footer ----*/

.project {
    padding-top: 30px;
    padding-bottom: 10px;
    background: $grey-bg;
    border-top: 2px #dedede solid;
}

.project h3 {
    display: inline;
    padding-right: 15px;
}

.footer {
  padding-top: 3%;
  background: #292929;
  font-weight: 300;
    color: $sec-font-color;
}

.footer ul {
  list-style: none;
  margin: 0;
}

.footer ul li {
  display: inline;
  padding-left: 10px;
  padding-right: 10px;
  font-weight: 400;
  font-size: 1.1em;
}

.footer a, .footer a:visited {
  color: $sec-font-color;
}

.footer a:hover, .footer a:active {
  color: $primary-color;
}

.footer p {
  font-weight: 300;
    color: $sec-font-color;
}

.footer a.button:hover, button:hover {
  background: #226EA1;
  color: $sec-font-color;
}

.footer span.pictogram {
    font-family: "entypo-social";
    padding-left: 10px;
    padding-right: 10px;
    font-size: 4.8em;
    color: $sec-font-color;
}

.footer span.pictogram:hover {
    color: $primary-color;
}

/*---- Process ----*/

.process {
    padding-top: 4%;
    padding-bottom: 4%;
}

.circle {
    border-radius: 35px;
    -webkit-border-radius: 35px;
    -moz-border-radius: 35px;
    background: $pri-font-color;
    color: $primary-color;
    padding: 10px;
    width: 35px;
    height: 35px;
    float: left;
    text-align: center;
}

.process-list {
    text-align: left;
}

.process-list h5, .process-list p { 
    padding-left: 40px;
    margin-left: 10px;
}

.process-list h5 {
    font-size: 1.4em;
}

.process h4 {
    font-size: 1.4em;
}

.process h4 > a,.process h4 > a:visited {
    color: $pri-font-color;
}

.process h4 > a:hover {
    color: $primary-color;
}

/*---- Contact Page ----*/

.contact {
  background: $primary-bg;
  padding-top: 5%;
  padding-bottom: 5%;
}

.contact h4 {
    margin-bottom: 0px;
}

.form-submit i {
  font-size: 3em;
}

.contact span.pictogram {
    font-family: "entypo-social";
    font-size: 4em;
    color: $pri-font-color;
}

.contact span.pictogram:hover {
    color: $primary-color;
}

textarea { 
    height: auto; 
}

/*---- Portfolio Page ----*/

.portfolio {
    background: $primary-bg;
    padding-top: 5%;
    padding-bottom: 5%;
}

.portfolio-section {
  padding-top: 4%;
  padding-bottom: 4%;
}

.portfolio-section-top {
  padding-bottom: 4%;
}

.shadow {
  -moz-box-shadow: 0px 0px 4px 4px #ccc;
  -webkit-box-shadow: 0px 0px 4px 4px #ccc;
  box-shadow: 0px 0px 4px 4px #ccc;
}

/*---- Blog Page ----*/

.blog {
  padding-top: 5%;
  padding-bottom: 8%;
  background: $primary-bg;
}

.blog ul {
  list-style: none;
}

.posts-list {
  padding-top: 2%;
  padding-bottom: 2%;
}

.posts-list h3 > a,.posts-list h3 > a:visited {
    color: $pri-font-color;
}

.posts-list h3 > a:hover {
    color: $primary-color;
}

/*---- Single Blog Post Page ----*/

.blog-post {
  padding-top: 1%;
  padding-bottom: 5%;
  background: $primary-bg;
}

.blog-post h2 {
  font-size: 2.5em;
  letter-spacing: 0.03em;
}

.highlight {
  background: #ededed;
  padding: 15px;
  margin-bottom: 2%;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  border: solid 0.5px #dedede;
}

pre {
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
}

code {
  font-weight: 400;
  color: $pri-font-color;
}

/* ---- Lean Slider ---- */

.lean-slider { 
    position: relative; 
    *zoom: 1;
}
.lean-slider:before,
.lean-slider:after {
    content: " ";
    display: table;
}
.lean-slider:after {
    clear: both;
}

.lean-slider-slide { 
    float: left;
    width: 100%;
    margin-right: -100%;
    display: none; 
}
.lean-slider-slide.current { display: block; }
/* ... */

